--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ==================================
 # SECURITY CONFIGURATION
 # ==================================
-TOKEN=RAYRAY
+TOKEN=MyReminderToken
 PROTECT_ROUTES=false
 
 # ==================================
