--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ==================================
 # SECURITY CONFIGURATION
 # ==================================
-TOKEN=MyReminderToken
+TOKEN=MyReminderTokenTest
 PROTECT_ROUTES=false
 
 # ==================================
