--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ==================================
 # SECURITY CONFIGURATION
 # ==================================
-TOKEN=MyReminderTokenTest
+TOKEN=myReminder
 PROTECT_ROUTES=false
 
 # ==================================
