--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ==================================
 # SECURITY CONFIGURATION
 # ==================================
-TOKEN=myReminder
+TOKEN=drew
 PROTECT_ROUTES=false
 
 # ==================================
