--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ==================================
 # SECURITY CONFIGURATION
 # ==================================
-TOKEN=drew
+TOKEN=RAYRAY
 PROTECT_ROUTES=false
 
 # ==================================
